--- a/index.html
+++ b/index.html
@@ -15,13 +15,14 @@
 <body>
     
     <div class="container" id="cont">
-        <div class="left-row" id="leftRow"><</div>
-        <div class="image">
-            <img src="/img/pexels-ahmed-aqtai-2233416.jpg" alt="Image" id="img">
+        <div class="left-row" id="leftRow">
+            <</div>
+                <div class="image">
+                    <img src="/img/pexels-ahmed-aqtai-2233416.jpg" alt="Image" id="img">
+                </div>
+                <div class="right-row" id="rightRow">></div>
         </div>
-        <div class="right-row" id="rightRow">></div>
-    </div>
-    <script src="script.js"></script>
+        <script src="script.js"></script>
 </body>
 
 </html>
